Work from the last class on main content

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -79,6 +79,29 @@ div#container {
                 float: right;
                 background-color: white;
                 padding: 10px;
+
+                h2{
+                    color: red;
+                    border-bottom: 2px dotted red;
+                    text-transform: uppercase;
+                    font-weight: normal;
+                }
+
+                p {
+                    font-size: 12px;
+
+                    span {
+                        font-weight: bold;
+                        font-size: 110%;
+                    }
+                }
+
+                a {
+                    text-decoration: none;
+                    color: red;
+                    text-align: right;
+                    text-transform: uppercase;
+                }
             }
         }
     }
