--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,12 +1,12 @@
 div#container {
-    border: 1px solid #ff0000;
+    /*border: 1px solid #ff0000;*/
     min-height: 500px;
     min-width: 900px;
     margin: 0 auto 0 auto;
     font-family: Arial, Helvetica, sans-serif;
 
     > * {
-        border: 1px dotted blue;
+        /*border: 1px dotted blue;*/
         margin: 5px;
 
         > img {
@@ -19,8 +19,8 @@ div#container {
 
         div.nav {
             text-align: right;
-            padding-right: 15px;
-            font-size: 11px;
+            padding-right: 25px;
+            font-size: 18px;
 
             a {
                 color: black;
@@ -34,6 +34,8 @@ div#container {
 
                 img {
                     vertical-align: auto;
+                    /*border: 1px solid red;*/
+                    margin-left: 5px;
                 }
             }
 
@@ -46,13 +48,17 @@ div#container {
 
             &.bottom-nav {
 
-                font-size: 10px;
-                padding: 5px;
+                font-size: 14px;
+                padding-right: 25px;
 
                 a {
                     text-transform: lowercase;
 
                 }
+            }
+
+            &.top-nav {
+                margin-bottom: 10px;
             }
         }
 
@@ -60,7 +66,7 @@ div#container {
             background-color: #c1c7bb;
             border-radius: 15px;
             margin: 15px 10px 70px;
-            padding: 20px 20px 20px 90px;
+            padding: 17px 17px 17px 90px;
             min-height: 500px;
             position: relative;
 
@@ -73,11 +79,11 @@ div#container {
                     display: block;
                     color: black;
                     font-size: 18px;
-                    font-family: Georgia, serif;
+                    font-family: Arial, Helvetica, sans-serif;
                     text-transform: uppercase;
                     text-decoration: none;
                     /*margin: 0 0 10px 0;*/
-                    padding: 18px 0 18px 18px;
+                    padding: 15px 0 15px 25px;
 
                     &:hover {
                         background-color: rosybrown;
@@ -90,20 +96,22 @@ div#container {
                 float: right;
                 background-color: white;
                 padding: 10px;
+                margin-bottom: 100px;
+
 
                 > img {
                     width: 100%;
                 }
 
                 h2 {
-                    color: red;
+                    color: darkolivegreen;
                     border-bottom: 2px dotted red;
                     text-transform: uppercase;
                     font-weight: normal;
                 }
 
                 p {
-                    font-size: 12px;
+                    font-size: 21px;
 
                     span {
                         font-weight: bold;
@@ -117,6 +125,7 @@ div#container {
                             text-decoration: none;
                             color: red;
                             text-transform: uppercase;
+                            font-size: 18px;
 
                             &:hover {
                                 text-decoration: underline;
@@ -139,12 +148,12 @@ div#container {
                 bottom: 0;
                 left: 0;
                 /*border: 1px solid red;*/
-                margin: 0 0 20px 40px;
+                margin: 0 0 75px 70px;
 
                 img {
                     display: block;
-                    margin: 25px 0;
-                    width: 150%;
+                    margin: 10px 0;
+                    width: 200%;
                 }
             }
         }
